--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>info.dvad</groupId>
     <artifactId>mvntest</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1-SNAPSHOT</version>
 
     <properties>
         <failsafe.fork.count>1</failsafe.fork.count>
@@ -16,6 +16,7 @@
         <project.resources.sourceEncoding>${encoding}</project.resources.sourceEncoding>
         <archetype.encoding>${encoding}</archetype.encoding>
         <cucumber.version>1.2.5</cucumber.version>
+        <joda-time.version>2.12.5</joda-time.version>
         <selenium.version>3.0.1</selenium.version>
     </properties>
 
@@ -148,7 +149,11 @@
             <artifactId>cucumber-guice</artifactId>
             <version>${cucumber.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${joda-time.version}</version>
+        </dependency>
 
         <!-- test dependencies -->
         <dependency>
